<resources>    <string name="app_name">Новости Стерлитамака</string>    <string name="navigation_drawer_open">Open navigation drawer</string>    <string name="navigation_drawer_close">Close navigation drawer</string>    <string name="nav_header_title">Новости Стерлитамака</string>    <string name="nav_header_subtitle">android.studio@android.com</string>    <string name="nav_header_desc">Navigation header</string>    <string name="action_settings">Settings</string>    <string name="menu_home">Все</string>    <string name="menu_proish">Происшествия</string>    <string name="menu_sport">Спорт</string>    <string name="menu_people">Общество</string>    <string name="menu_economy">Экономика</string>    <string name="menu_weather">Погода</string>    <string name="menu_politics">Политика</string>    <string name="menu_gallery">Афиша</string>    <string name="menu_goroscope">Гороскоп</string>    <string name="menu_send">О программе</string>    <string name="textSite">Информация взятa с сайта GOROBZOR.RU</string>    <string name="textSite1">Информация взятa с сайта STERLIGRAD.RU</string>    <string name="site">https://sterlegrad.ru/str</string>    <string name="siteSociety">https://sterlegrad.ru/society</string>    <string name="siteEconomy">https://sterlegrad.ru/economy</string>    <string name="sitePolitics">https://sterlegrad.ru/politics</string>    <string name="siteSport">https://sterlegrad.ru/sport</string>    <string name="siteIncidents">https://sterlegrad.ru/incidents</string>    <string name="siteGoroscope">https://sterlegrad.ru/xfsearch/%D0%B3%D0%BE%D1%80%D0%BE%D1%81%D0%BA%D0%BE%D0%BF</string>    <string name="siteWeather">"https://gorobzor.ru/novosti/pogoda-v-ufe-i-bashkirii"</string>    <string name="contacts">        <b>Контакты gorobzor.ru</b> \n        <br><b>Отдел рекламы</b></br>\n        <br>Ахметова Лия Айратовна</br>\n        <br>pr-gorobzor@mail.ru</br>\n        <br>+7 917 34 34 968</br>\n        <br></br>\n        <br><b>Редакция</b></br>\n        <br>Хасанов Артур Робертович</br>\n        <br>ufagorobzor@gmail.com</br>\n        <br>+7 919 60 51 651</br>\n        <br></br>\n        <b>Контакты sterlegrad.ru</b> \n        Сетевое издание «Стерлеград.ру» \n        Зарегистрировано Федеральной службой по надзору в сфере связи, информационных технологий и массовых коммуникаций (Роскомнадзор) под рег. № ЭЛ № ФС 77 - 78597. \n        Учредитель и главный редактор: Валишина Н.Б. \n        Электронный почтовый адрес редакции: 1@sterlegrad.ru \n        Адрес редакции: 450057, Республика Башкортостан, г. Уфа, пр-т Салавата Юлаева, д. 3. \n        Телефон: +7 (927) 320-19-18 \n    </string></resources>