<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Новости">
            <menu>
                <group android:checkableBehavior="single">
                <item
                android:id="@+id/nav_home"
                android:icon="@drawable/newspaper"
                android:title="@string/menu_home"
                    />
                    <item
                        android:id="@+id/nav_proish"
                        android:icon="@drawable/alarm_light_outline"
                        android:title="@string/menu_proish" />
                <item
                    android:id="@+id/nav_sport"
                    android:icon="@drawable/soccer"
                    android:title="@string/menu_sport" />
                <item
                    android:id="@+id/nav_people"
                    android:icon="@drawable/human_male_female"
                    android:title="@string/menu_people" />
                <item
                    android:id="@+id/nav_economy"
                    android:icon="@drawable/cash_multiple"
                    android:title="@string/menu_economy" />
                <item
                    android:id="@+id/nav_weather"
                    android:icon="@drawable/weather_cloudy"
                    android:title="@string/menu_weather" />
                <item
                    android:id="@+id/nav_politics"
                    android:icon="@drawable/script_text_outline"
                    android:title="@string/menu_politics" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/theater"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_goroscope"
            android:icon="@drawable/zodiac_aries"
            android:title="@string/menu_goroscope" />
    </group>

    <item android:title="Дополнительно">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings_outline"
                android:title="Настройки"
                />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/help_circle_outline"
                android:title="@string/menu_send"
                />
        </menu>
    </item>

</menu>
